--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ homepage: https://github.com/VictorRancesCode/flutter_dialogflow
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.0+2
+  http: any
   googleapis_auth: ^0.2.6
 
 dev_dependencies:
